kubernetes/apps/main/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: grafana
    gethomepage.dev/pod-selector: app=grafana
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/description: Dashboards
  name: grafana
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
